<resources>
    <string name="app_name">National Park App</string>
    <string name="title_activity_search_parks">Search Parks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="searchButton">Search</string>
    <string name="parkNameViewResult">Park Name</string>
    <string name="parkNameId">Park Id</string>
    <string name="parkResultIcon">Park Result Icon</string>
    <string name="title_activity_maps">Map</string>
    <string name="park_description">Yellow Stone National Park was one of the first parks to be designated as a National Park</string>
    <string name="park_name_label">Park Name</string>
    <string name="park_full_name">YellowStone National Park</string>
    <string name="park_description_label">Description</string>
    <string name="park_title">YellowStone</string>
    <string name="park_summary">Old Faithful</string>
    <string name="fab_content_description">Star FAB</string>
    <string name="hello_text">Hello Explorer!</string>
    <string name="no_favorites">It looks like you haven\'t set any favorites yet. Search for a park, then mark it as a favorite.</string>
    <string name="no_visited">It looks like you haven\'t visited any parks yet. Search for a park, then mark it as visited.</string>
    <string name="load_favorites">Loading Favorites...</string>
    <string name="load_visited">Loading Visited Parks...</string>
    <string name="mapButtonLabel">MAP</string>
    <string name="btnVisitedLabel">Visited</string>
    <string name="btnFavoriteLabel">Add to Favorites</string>
</resources>